webapp/src/main/webapp/css/main.css
html{
    color: #385170;
}

.feature-icon {
    width: 4rem;
    height: 4rem;
    border-radius: .75rem;
    background-color: #9FD3C7 !important;
}

.icon-square {
    width: 3rem;
    height: 3rem;
    border-radius: .75rem;
}

svg.bi {
    fill: white;
}

.card-cover {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.feature-icon-small {
    width: 3rem;
    height: 3rem;
}

body {
    color: #142D4C;
}

.browseCards{
    display: flex;
    margin: auto;
    max-width: 80%;
    text-decoration: none;
}

.formCard{
    display: flex;
    margin: auto;
    max-width: 40%;
}

.heroColor{
   background-color:  #ECECEC;
}

.bodyContent{
    background-color: #ECECEC;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.inlineFormInputContainer{
    display: flex;
    justify-content: space-between
}

.inlineFormInput{
    display: inline-block;
    width: 48%
}

.inlineFormTripleInputInput{
    display: inline-block;
    width: 32%
}

.formButton{
    display: block;
    margin: 0 auto;
}

.nav-item{
    font-size: large;
    text-decoration: none;
    color: #142D4C;
}

.inputSpan{
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.formError{
    color: red;
    margin: 0;
    padding-bottom: 5px;
    padding-top: 5px;
}

.form-label{
    margin: 0 0 5px;
}

.navbar{
    box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
}

.nav-link{
    color: #142D4C;
}

.light{
    color: #385170;
}

.btn-color{
    color:#ECECEC;
    background-color:#385170;
    border: none;
}
.btn-color:hover{
    color:#ECECEC;
    background-color:#142D4C;
}
.filterCard{
    display: inline-block;
}
.tripCards{
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 100%;
}

.card-title{
    color: #142D4C;
}

footer{
    margin-top: auto;
    background-color: white;
}

.userDetailsNavBar{
    display: flex; flex-direction: column; justify-content: center; align-items: center;
}

.image-wrapper-create {
    max-width: 800px;
    max-height: 600px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.image-wrapper-create img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
}

.browseImg{
    width: 25rem;
    height: 20rem;
    object-fit: cover;
}

.rating-stars {
    cursor: pointer;
}

.star {
    color: #385170;
}


.rating {
    display: inline-block;
    direction: rtl;
}

.rating label {
    width: 1em;
    height: 1em;
    margin-right: 0.25em;
    display: inline-block;
    cursor: pointer;
}

.rating label::before {
    content: "\2606";
    color: #142D4C;
    font-size: 1.5em;
    line-height: 1em;
    text-align: center;
    display: block;
}

.rating input[type="radio"] {
    display: none;
}

.rating input[type="radio"]:checked ~ label::before {
    content: "\2605";
}

.profileImage {
    height: 200px;
    width: 200px;
    object-fit: cover;
    border-radius: 10000px;
    border:3px solid #385170;
}

.profileImageNavbar {
    height: 50px;
    width: 50px;
    object-fit: cover;
    border-radius: 10000px;
}

